# Oliver

./: .gitignore  Oliver.kdev4  README.md  app.py
Arduino/: CMakeLists.txt  main.cpp
Arduino/Arduino_SDK/arduino/doc/arduino-core/reference/: AnalogRead.html  AnalogReference.html  AnalogWrite.html  Arithmetic.html  Assignment.html  AttachInterrupt.html  BitRead.html  BitWrite.html  BitwiseAnd.html  BitwiseCompoundAnd.html  BitwiseCompoundOr.html  BitwiseXorNot.html  Boolean.html  BooleanVariables.html  Byte.html  Char.html  CharCast.html  ClientAvailable.html  ClientStop.html  Comparison.html  Constants.html  Continue.html  DelayMicroseconds.html  DigitalWrite.html  DoWhile.html  EEPROM.html  EEPROMWrite.html  Else.html  Ethernet.html  EthernetIPAddress.html  EthernetMaintain.html  FileClose.html  (+122 more)
Arduino/Arduino_SDK/doc/arduino-core/reference/: Abs.html  Array.html  Bit.html  BitClear.html  BitSet.html  Bitshift.html  Braces.html  Break.html  ByteCast.html  Changes.html  ClientConnect.html  ClientConnected.html  ClientConstructor.html  ClientFlush.html  ClientPrint.html  ClientPrintln.html  ClientRead.html  ClientWrite.html  Comments.html  Const.html  Constrain.html  Cos.html  Define.html  Delay.html  DetachInterrupt.html  DigitalRead.html  Double.html  EEPROMRead.html  EthernetBegin.html  EthernetClient.html  EthernetLocalIP.html  EthernetUDPAvailable.html  EthernetUDPBeginPacket.html  EthernetUDPParsePacket.html  EthernetUDPRemoteIP.html  EthernetUDPWrite.html  FAQ.html  FileAvailable.html  FileIsDirectory.html  FileOpenNextFile.html  (+112 more)
Arduino/arduino/: Arduino.h
(+8 files in other folders)
